# python-poetry-starter

./: LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yaml
scripts/: transition_to_uv.py  update_from_upstream.py  update_from_upstream_test.py
skills/code-conventions/: SKILL.md
skills/skills-meta/: SKILL.md
src/: main_test.py
src/my_project/: main_test.py
