[project]
name = "my-project"
version = "0.1.0"
description = ""
authors = [{ name = "Name Surname", email = "email@example.com" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = []

[tool.poetry.requires-plugins]
poethepoet = { version = "~0.34.0", extras = ["poetry_plugin"] }

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
black = "^25.1.0"
pyright = "^1.1.400"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["src"]
python_files = ["*_test.py"]

[tool.pyright]
pythonVersion = "3.13"
typeCheckingMode = "strict"
useLibraryCodeForTypes = true
exclude = ["**/__pycache__", "src/typings"]
stubPath = "src/typings"
reportUnknownVariableType = "warning"
reportUnknownArgumentType = "none"
reportUnknownParameterType = "warning"
reportUnknownLambdaType = "warning"
reportUnknownMemberAccess = "warning"
reportUnknownMemberType = "none"
reportUnknownModuleType = "warning"
reportUnnecessaryTypeIgnoreComment = "warning"

[tool.poetry]
packages = [{ include = "my_project", from = "src" }]

[tool.poetry.scripts]
main = "my_project.main:main"

[tool.poe.tasks]
test = "python -m pytest"
lint = "python -m black --check ./src"
lint-fix = "python -m black ./src"
typecheck = "python -m pyright ./src"
